# wife

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_admin.py
backend/app/: main.py
backend/app/bot/: __init__.py  __main__.py  handlers.py  keyboards.py  notifications.py  setup.py  webhook.py
backend/app/core/: admin_security.py  config.py  security.py  telegram_auth.py
backend/app/database/: base.py  session.py
backend/app/models/: __init__.py  admin.py  appointment.py  enums.py  reminder.py  review.py  timeoff.py  working_hours.py
backend/app/modules/admin/: appointments.py  auth.py  clients.py  dependencies.py  schedule.py  services.py  settings.py
backend/app/modules/auth/: dependencies.py  router.py  schemas.py  service.py
backend/app/modules/booking/: repository.py  router.py  schemas.py  service.py  slots.py
backend/app/modules/client/: models.py  repository.py  schemas.py
backend/app/modules/service/: models.py  repository.py  router.py  schemas.py
backend/app/modules/settings/: models.py  repository.py
backend/app/scripts/: seed.py  wait_for_db.py
backend/app/workers/: reminder_worker.py
docs/: API.md  CHANGELOG.md  DECISIONS.md  DEPLOY-PANEL.md  PROJECT_BIBLE.md  SESSIONS.md  SPEC.md  telegram-proxy-worker.js
frontend/: .env.example  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  (+2 more)
(+32 files in other folders)
