[project]
name = "askbrows-backend"
version = "0.1.0"
description = "askbrows — FastAPI backend, Telegram bot and reminder worker (monorepo backend package)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-jose[cryptography]>=3.3",
    "aiogram>=3.15",
    "redis>=5.2",
    "tzdata>=2024.2",
    "bcrypt>=4.2",
    "pyotp>=2.9",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
